Remove more dead code from removal of failures and properties tabs from Job/Stage detail.
These UI tabs do not exist, for Properties for a long time, so the current "more..." link goes nowhere on Job Details.
The code in JobStatusJsonPresentationModel for tab-to-show is unused, and not returned back to the UI, only used in tests.

--- a/server/src/main/webapp/WEB-INF/vm/build_detail/_build_detail_summary_jstemplate.vm
+++ b/server/src/main/webapp/WEB-INF/vm/build_detail/_build_detail_summary_jstemplate.vm
@@ -37,7 +37,7 @@
     {/if}
   #end
 </li>
-  <li><span class="header">Completed on: </span><span id="build_completed_date">${% build.build_completed_date %}</span><a  href="#tab-properties" class ="more" target="_blank" onclick="new TabsManager('properties')">more...</a></li>
+  <li><span class="header">Completed on: </span><span id="build_completed_date">${% build.build_completed_date %}</span></li>
 <li><span class="header">Build cause: </span><span id="stage-${% build.id %}-buildCause">$esc.html($esc.html($presenter.buildCauseMessage))</span></li>
   {if build.current_status.toLowerCase() == 'passed' ||  build.current_status.toLowerCase() == 'failed'}
 <li><span class="header">Duration: </span><span>${% moment.duration(parseInt(build.current_build_duration), 's').humanizeForGoCD() %}</span></li>
