--- a/server/src/main/webapp/WEB-INF/vm/build_detail/build_detail_page.vm
+++ b/server/src/main/webapp/WEB-INF/vm/build_detail/build_detail_page.vm
@@ -42,8 +42,7 @@
                 <ul id="build-detail-summary" class="summary">
                   <li><span class="header">Scheduled on: </span><span id="build_scheduled_date">Loading...</span></li>
                   <li><span class="header">Agent: </span><span id="agent_name">Loading...</span></li>
-                  <li><span class="header">Completed on: </span><span id="build_completed_date">Loading...</span><a
-                    href="#tab-properties" class="more" onclick="new TabsManager('properties')">more...</a></li>
+                  <li><span class="header">Completed on: </span><span id="build_completed_date">Loading...</span></li>
                   <li><span class="header">Build cause: </span><span
                     id="stage-${presenter.id}-buildCause">$esc.html($presenter.buildCauseMessage)</span></li>
                   <li class="timer_area">
