Convert header to FreeMarker

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/vm/_jef_override_for_old_ui.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/vm/_jef_override_for_old_ui.scss
@@ -33,7 +33,7 @@ a {
 
 /* remove padding and margin for background */
 
-/* old velocity stuff */
+/* old freemarker view-model stuff */
 #bd {
   padding: 0;
   margin: 0;
