--- a/server/src/main/webapp/WEB-INF/vm/shared/_footer.vm
+++ b/server/src/main/webapp/WEB-INF/vm/shared/_footer.vm
@@ -19,27 +19,14 @@
         </div>
         <!-- end content -->
 
-    </div></div></div><!-- end of body_bg, body_hightlight, body_wrapper-->
+    </div></div></div><!-- end of body_bg, body_bg_highlight, body_wrapper-->
 <div id="app-footer"></div>
            <div id="back_to_top" class='back_to_top' title="Scroll to Top">Top</div>
     </body>
 
     <script type="text/javascript">
-        restoreSidebarStatus();
-
-        ##new AjaxRefresher("$req.getContextPath()/server/messages.json", "$req.getContextPath()/auth/login", {executeImmediately: true});
-
         #if($global_error_message && $global_error_message != "")
             FlashMessageLauncher.warn("$esc.javascript("$global_error_message")", null, true);
         #end
-
-        if(Prototype.Browser.IE){
-            $$('.rounded-corner-for-body').each(function(container){
-                $(container);
-                if(container.getWidth() % 2 == 1){
-                    container.setStyle({width: container.getWidth() + 1 + 'px'});
-                }
-            })
-        }
     </script>
 </html>
