Change the cursor on Sign In hover
Makes it consistent with plugins

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/login_page/login_page_widget.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/login_page/login_page_widget.scss
@@ -126,6 +126,7 @@ $opacity: 0.2;
   font-size:     16px;
   border-radius: $global-border-radius;
   border:        none;
+  cursor:        pointer;
 }
 
 .login-form-fields {
