--- a/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/show.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/show.html.erb
@@ -9,7 +9,7 @@
 -%>
 <div class="sub_tab_container_content">
     <div id="tab-content-of-source-xml">
-        <%= render :partial => 'admin/configuration/heading.html', :locals => {:scope => {:go_config => @go_config}} -%>
+        <%= render :partial => 'admin/configuration/heading', :locals => {:scope => {:go_config => @go_config}} -%>
         <div class="admin_holder" id="admin-holder-for-admin-config-source-xml">
             <div class='form_heading'>
                 <div class="buttons-group">
