--- a/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/split_pane.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/admin/configuration/split_pane.html.erb
@@ -1,14 +1,14 @@
 <div class="sub_tab_container_content">
     <div id="tab-content-of-source-xml">
-                <%= render :partial => 'admin/configuration/heading.html', :locals => {:scope => {:go_config => @go_config}} -%>
-                <%= render :partial => "admin/shared/global_errors.html" -%>
+                <%= render :partial => 'admin/configuration/heading', :locals => {:scope => {:go_config => @go_config}} -%>
+                <%= render :partial => "admin/shared/global_errors" -%>
                 <div id="admin-holder-for-admin-config-source-xml">
                     <div class='conflicted_content'>
                         <h3>Your Changes</h3>
                         <pre class="wrap_pre"><%= html_escape @conflicted_config.content -%></pre>
                     </div>
                     <div class='current_content'>
-                        <%= render :partial => 'admin/configuration/form.html', :locals => {:scope => {:go_config => @go_config, :go_config_revision => @go_config_revision}} -%>
+                        <%= render :partial => 'admin/configuration/form', :locals => {:scope => {:go_config => @go_config, :go_config_revision => @go_config_revision}} -%>
                     </div>
                 </div>
 
