--- a/server/src/main/webapp/WEB-INF/rails/app/views/shared/_build_cause.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/shared/_build_cause.html.erb
@@ -7,10 +7,10 @@
             <div class="material_name"><%= "#{scope[:material].getTypeForDisplay()}" %> - <%= "#{scope[:material].getDisplayName()}" -%></div>
             <% if !dependency_material?(scope[:material]) %>
                 <%if scope[:show_latest_only]%>
-                    <%= render :partial => "shared/modification.html", :locals => {:scope => {:modification => material_revision_in_build_cause.getLatestModification(), :pipeline_name => scope[:pipeline_name], :show_files => scope[:show_files]}}-%>
+                    <%= render :partial => "shared/modification", :locals => {:scope => {:modification => material_revision_in_build_cause.getLatestModification(), :pipeline_name => scope[:pipeline_name], :show_files => scope[:show_files]}}-%>
                 <%else%>
                     <% material_revision_in_build_cause.getModifications().each do |mod_in_build_cause| %>
-                        <%= render :partial => "shared/modification.html", :locals => {:scope => {:modification => mod_in_build_cause, :pipeline_name => scope[:pipeline_name], :show_files => scope[:show_files]}}-%>
+                        <%= render :partial => "shared/modification", :locals => {:scope => {:modification => mod_in_build_cause, :pipeline_name => scope[:pipeline_name], :show_files => scope[:show_files]}}-%>
                     <% end %>
                 <%end%>
 
