--- a/server/src/main/webapp/WEB-INF/rails/app/views/stages/_run_details.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/stages/_run_details.html.erb
@@ -1,4 +1,4 @@
-<%=render :partial => "stages/schedule_info.html", :locals => {:scope => {:stage => @stage}} %>
+<%=render :partial => "stages/schedule_info", :locals => {:scope => {:stage => @stage}} %>
 
 <div class="duration">
     <span class="label">Duration:</span>
