--- a/server/src/main/webapp/WEB-INF/rails/app/views/stages/history.html.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/stages/history.html.erb
@@ -1,1 +1,1 @@
-<%= render :partial => "stage_history.html", :locals => {:scope => {:stage_history_page => @stage_history_page, :tab => params[:tab], :current_stage_pipeline => @pipeline, :current_config_version => @current_config_version}} %>
+<%= render :partial => "stage_history", :locals => {:scope => {:stage_history_page => @stage_history_page, :tab => params[:tab], :current_stage_pipeline => @pipeline, :current_config_version => @current_config_version}} %>
