--- a/server/src/main/webapp/WEB-INF/rails/app/views/stages/stage.json.erb
+++ b/server/src/main/webapp/WEB-INF/rails/app/views/stages/stage.json.erb
@@ -6,15 +6,15 @@
             "jobs_in_progress": {"html": <%== render_json :partial => "jobs_breakdown.html.erb" , :locals=> {:scope => {:message => "In Progress: #{@stage.inProgressJobs().size()}", :jobs => @stage.inProgressJobs(),:parent_id=>"jobs_in_progress"}} %>},
 
         <%when 'jobs'%>
-            "jobs_grid": {"html": <%== render_json :partial=> 'jobs.html', :locals => {:scope => {:jobs => @jobs, :stage => @stage, :has_operate_permissions => @has_operate_permissions }}  %>},
+            "jobs_grid": {"html": <%== render_json :partial=> 'jobs', :locals => {:scope => {:jobs => @jobs, :stage => @stage, :has_operate_permissions => @has_operate_permissions }}  %>},
     <%end%>
     "pipeline_status_bar": {"html": <%== render_json :partial => "pipelines/status_bar.html.erb", :locals => {:scope => {:pipeline => @pipeline, :current_config_version => @current_config_version, :stage_config_version => @stage.getStage().getConfigVersion()}} %>},
-    "stage_result": {"html": <%== render_json :partial => "stage_result.html", :locals => {:scope => {:state => @stage.getState(), :cancelledBy => @stage.getCancelledBy()}} %>},
-    "stage_run_details": {"html": <%== render_json :partial => "run_details.html", :locals => {:scope => {}} %>},
-    "other_stage_runs": {"html": <%== render_json :partial => "other_stage_runs.html", :locals => {:scope => {}}  %>},
-    "current_stage_run": {"html": <%== render_json :partial => "current_stage_run.html", :locals => {:scope => {}}  %>},
+    "stage_result": {"html": <%== render_json :partial => "stage_result", :locals => {:scope => {:state => @stage.getState(), :cancelledBy => @stage.getCancelledBy()}} %>},
+    "stage_run_details": {"html": <%== render_json :partial => "run_details", :locals => {:scope => {}} %>},
+    "other_stage_runs": {"html": <%== render_json :partial => "other_stage_runs", :locals => {:scope => {}}  %>},
+    "current_stage_run": {"html": <%== render_json :partial => "current_stage_run", :locals => {:scope => {}}  %>},
     <% unless ['pipeline','stats'].include?(params[:action]) -%>
-    "stage_history": {"html": <%== render_json :partial => "stage_history.html", :locals=> {:scope => {:stage_history_page => @stage_history_page, :tab => params[:action], :current_stage_pipeline => @pipeline, :current_config_version => @current_config_version}} %>},
+    "stage_history": {"html": <%== render_json :partial => "stage_history", :locals=> {:scope => {:stage_history_page => @stage_history_page, :tab => params[:action], :current_stage_pipeline => @pipeline, :current_config_version => @current_config_version}} %>},
     <% end %>
-    "pipeline_header": {"html": <%== render_json :partial => "pipelines/pipeline_header.html", :locals => {:scope => {}}  %>}
+    "pipeline_header": {"html": <%== render_json :partial => "pipelines/pipeline_header", :locals => {:scope => {}}  %>}
 }
