Fix height of group admin config snippet editor
Currently being limited by foundation-sites CSS to max-height: 200 which is inconsistent with the main editor

--- a/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/views/_admin_pipelines_snippet.scss
+++ b/server/src/main/webapp/WEB-INF/rails/app/assets/stylesheets/views/_admin_pipelines_snippet.scss
@@ -39,6 +39,7 @@
     overflow: auto;
     padding: 5px;
     height: 500px;
+    max-height: 500px;
 }
 
 #pipeline_snippet_edit #content_container_for_edit{
