Move color definitions to the right place

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/global/theme.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/global/theme.scss
@@ -22,6 +22,7 @@ $active-menu: #943a9e;
 $header-bg: #33364e;
 
 $border-color: $line-color;
+$passed: #00c853;
 $building: #ffc11b;
 $failed: #fa2d2d;
 
