Add spaces after comments to satisfy stylelint defaults
Will make it easier to switch later.

--- a/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pac/styles.scss
+++ b/server/src/main/webapp/WEB-INF/rails/webpack/views/pages/pac/styles.scss
@@ -53,7 +53,7 @@ $shell-sample-cmd: $task-cmd-color;
   flex-grow: 0;
 }
 
-.preview-pane[class*="language-"] { // scss-lint:disable-line
+.preview-pane[class*="language-"] {
   position: relative;
   margin: 0;
 
